Fix of 'Copy & paste places widgets on top of each other'.

BUG: 291742
FEATURE: 85807